kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/name: leto-latest
    app.kubernetes.io/component: leto-latest
  name: leto-latest-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: leto-latest
      app.kubernetes.io/component: leto-latest
  
  template:
    metadata:
      labels:
        app.kubernetes.io/name: leto-latest
        app.kubernetes.io/component: leto-latest
    spec:
      containers:
        - image: acrleto.azurecr.io/leto-modelizer:latest
          name: leto-latest-cn
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: leto-latest-cm-nginx
      imagePullSecrets:
        - name: acr-credentials
      volumes:
        - configMap:
            defaultMode: 420
            name: leto-latest-cm-nginx
          name: leto-latest-cm-nginx
