kubernetes/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: leto-latest-svc
  labels:
    app.kubernetes.io/name: leto-latest
    app.kubernetes.io/component: leto-latest
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: leto-latest
    app.kubernetes.io/component: leto-latest
