kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leto-latest-ingress
spec:
  rules:
    - host: samar.flask-app.ht.nearteam.fr
      http:
        paths:
          - path: 
            pathType: Exact
            backend:
              service:
                name: leto-latest-svc
                port:
                  number: 8080
